--- a/Demographic_Loan_Analysis.ipynb
+++ b/Demographic_Loan_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF/0eZuM14V2WBS6jchd+e",
+      "authorship_tag": "ABX9TyMMKE/bgwJua7bUdf4b+c5i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,9 +33,7 @@
         "\n",
         "Elaborado por [Renan Abreu](https://www.linkedin.com/in/renanabreuc/).\n",
         "\n",
-        "Data 07/02/2024\n",
-        "\n",
-        "Para sair da zona de conforto e complementar meus estudos em Python, decidi desenvolver meu primeiro projeto. Trata-se de uma análise exploratória simples e pré-processamento de dados, onde busco aplicar conceitos teóricos e aprimorar minhas habilidades técnicas.\n"
+        "Data 07/02/2024"
       ],
       "metadata": {
         "id": "PIKcUSR0Nbsg"
